# Connectr

./: CMakeLists.txt  README.md  sdkconfig
components/esp32-wifi-manager/: Kconfig
components/esp32-wifi-manager/src/: code.js  http_app.c  index.html  style.css  wifi_manager.c  wifi_manager.h
main/: CMakeLists.txt  config.h  main.c  message_handler.c  message_handler.h  mqtt_handler.c  mqtt_handler.h  wifi_handler.c  wifi_handler.h
main/authentication/: auth.c  auth.h
main/gpio/: gpio_config_parser.c  gpio_config_parser.h  gpio_handler.c  gpio_handler.h  gpio_memory_handler.c  gpio_memory_handler.h
main/i2c/: i2c_config_parser.c  i2c_config_parser.h  i2c_handler.c  i2c_handler.h  i2c_helper.c  i2c_helper.h
main/iot2tangle/: i2t_mqtt.c  i2t_mqtt.h  iot2tangle.c  iot2tangle.h
